<resources>
    <string name="app_name">InventariarApp</string>

    <string name="iniciarRetomar_string">Cargar datos</string>
    <string name="compartir_string">Compartir reporte</string>

    <!-- General -->
    <string name="folder">Inventariar</string>
    <string name="initial_activity_label">Carga de datos</string>
    <string name="wait_activity_label">Ingreso codigo de barras</string>
    <string name="main_activity_label">Locacion</string>
    <string name="item_form_activity_label">Item</string>

    <!-- main-->
    <string name="add_button">Agregar item</string>
    <string name="finish_button">Terminar</string>
    <string name="new_location_add">Nueva locación agregada</string>
    <string name="inventroy_column">Código</string>
    <string name="name_column">Nombre</string>

    <!-- string array from table columns -->
    <array name="columnValues">
        <item>Nombre</item>
        <item>Código</item>
    </array>

    <!-- string array for CSV file -->
    <array name="columnCSV">
        <item>Codigo inventario</item>
        <item>Nombre</item>
        <item>Numero de serie</item>
        <item>Marca</item>
        <item>Categoria</item>
        <item>Numero de fotos</item>
        <item>Descripcion</item>
        <item>Valor</item>
    </array>

    <!-- WaitScannActivity -->
    <string name="waitLocation">Escaneé el código de localización</string>
    <string name="waitItem">Escaneé el código del artículo</string>
    <string name="omit_button">Omitir</string>
    <string name="no_location">Tiene que poner el codigo de la locación</string>


    <!-- ItemFormFragment -->
    <string name="inventory_hint">Código de inventario (obligatorio)</string>
    <string name="name_hint">Nombre (obligatorio)</string>
    <string name="number_hint">Número de serie</string>
    <string name="brand_hint">Marca (obligatorio)</string>
    <string name="category_hint">Categoria (obligatorio)</string>
    <string name="description_hint">Descripción</string>
    <string name="value_hint">Valor del bien</string>
    <string name="msg_noInventoryCode">Complete el número de inventario del item</string>
    <string name="msg_noObligatoryFields">Complete los campos obligatorios</string>
    <array name="brands">
        <item>Marca 1</item>
        <item>Marca 2</item>
        <item>Marca 3</item>
        <item>Marca 4</item>
        <item>Marca 5</item>
    </array>

    <array name="categorys">
        <item>Categoria 1</item>
        <item>Categoria 2</item>
        <item>Categoria 3</item>
        <item>Categoria 4</item>
        <item>Categoria 5</item>
    </array>

</resources>
