<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gonza.inventariar.inventariar.UI.ItemFormFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/inventory_editText"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/inventory_hint"
                android:layout_gravity="left" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/name_editText"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/name_hint"
                android:layout_gravity="left" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/barcode_editText"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/number_hint"
                android:layout_gravity="left" />

            <com.weiwangcn.betterspinner.library.BetterSpinner
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/brand_hint"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/brand_spinner"
                android:layout_gravity="left" />

            <com.weiwangcn.betterspinner.library.BetterSpinner
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:hint="@string/category_hint"
                android:layout_marginTop="10dp"
                android:id="@+id/category_spinner" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:orientation="horizontal"
                android:background="@drawable/all_borders"
                android:weightSum="1">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:id="@+id/pic1_imageView"
                    android:src="@drawable/add_image"
                    android:layout_weight="0.25" />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:id="@+id/pic2_imageView"
                    android:layout_weight="0.25" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:id="@+id/pic3_imageView"
                    android:layout_weight="0.25" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:id="@+id/pic4_imageView"
                    android:layout_weight="0.25" />

            </LinearLayout>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/description_editText"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/description_hint"
                android:layout_gravity="left" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/value_editText"
                android:inputType="number"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/value_hint"
                android:layout_gravity="left" />

        </LinearLayout>

    </ScrollView>


</FrameLayout>
