<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.main">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/container_background"
        android:id="@+id/location_container">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/location_escalado"
            android:layout_alignBottom="@+id/location_TextView"
            android:layout_toLeftOf="@+id/location_TextView"
            android:layout_toStartOf="@+id/location_TextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Locación"
            android:paddingLeft="15dp"
            android:textColor="@color/label_text"
            android:id="@+id/location_TextView"
            android:layout_gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_container"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/location_container" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:background="@color/container_background"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/button_container">

        <Button
            android:layout_height="match_parent"
            android:text="@string/add_button"
            android:layout_width="0.0dip"
            android:layout_weight="1.0"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/add_button" />

        <Button
            android:text="@string/finish_button"
            android:layout_width="0.0dip"
            android:layout_height="match_parent"
            android:id="@+id/finish_button"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1.0"/>

        <Button
            android:text="@string/compartir_string"
            android:layout_width="0.0dip"
            android:layout_height="match_parent"
            android:id="@+id/to_share_button"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1.0"/>
    </LinearLayout>


</RelativeLayout>
